--- a/admin/css/lightshare-admin.css
+++ b/admin/css/lightshare-admin.css
@@ -330,6 +330,7 @@
 	position: relative;
 	width: 120px;
 	height: 18px;
+	border: 1px solid transparent;
 	font-size: 12px;
 	float: left;
 	padding-right: 8px;
