--- a/public/css/lightshare-public.css
+++ b/public/css/lightshare-public.css
@@ -186,6 +186,28 @@
 	margin: 0;
 }
 
+.lightshare-floating .lightshare-floating-count {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 8px;
+	line-height: 1.1;
+}
+
+.lightshare-floating .lightshare-floating-count-value {
+	font-size: 16px;
+	font-weight: 700;
+	color: #111;
+}
+
+.lightshare-floating .lightshare-floating-count-label {
+	font-size: 11px;
+	font-weight: 500;
+	color: #666;
+	text-transform: lowercase;
+}
+
 .lightshare-toast {
 	position: fixed;
 	bottom: 24px;
