Squashed commit of the following:
commit 4c284b08afc058142f6f74c12bd592c0cad49616
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 15:48:18 2026 +0530

    Update lightshare.css

commit 81d0cc32488866cd5dfa08382a8995e928620a7a
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 15:48:14 2026 +0530

    refactored

commit 48b6dd8bd0580db522b1a4d9b7f3ddcb98a18ed2
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 15:35:42 2026 +0530

    Refactor frontend/admin JS to vanilla and harden delayed-load behavior

--- a/admin/css/lightshare-admin.css
+++ b/admin/css/lightshare-admin.css
@@ -325,6 +325,12 @@
 	overflow: hidden;
 	float: left;
 	margin-bottom: 0px;
+	cursor: grab;
+}
+
+.lightshare-social-networks li.is-dragging {
+	opacity: 0.6;
+	cursor: grabbing;
 }
 .lightshare-social-networks li label {
 	position: relative;
