Squashed commit of the following:
commit fa3e3112df192137cb1a12193e0523da65b6f545
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 16:30:23 2026 +0530

    fix floating button display issue on mobile

commit 2c20e96a4d854180631ff20d6f2d279bdb6e9868
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 16:29:56 2026 +0530

    refactor

commit 06448e60c64311ffd723c3b75b69d83b155be0db
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 16:29:40 2026 +0530

    format comments

commit 83bc7930bb2b611ed0994a46c497327d20bb8b4f
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 16:00:42 2026 +0530

    bump the version

commit fd61587943bedd9f724950842708e555302432e7
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 15:55:50 2026 +0530

    Squashed commit of the following:

    commit 4c284b08afc058142f6f74c12bd592c0cad49616
    Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
    Date:   Sat Feb 14 15:48:18 2026 +0530

        Update lightshare.css

    commit 81d0cc32488866cd5dfa08382a8995e928620a7a
    Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
    Date:   Sat Feb 14 15:48:14 2026 +0530

        refactored

    commit 48b6dd8bd0580db522b1a4d9b7f3ddcb98a18ed2
    Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
    Date:   Sat Feb 14 15:35:42 2026 +0530

        Refactor frontend/admin JS to vanilla and harden delayed-load behavior

commit 4959dac5e0dbd9afcc50bd6afb2d36fc59da3bd3
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 10:02:24 2026 +0530

    Show share count in floating buttons

commit f9e66e567239064cdf04f1db829f8546c1dba056
Author: Nazim Husain <28640245+nazim848@users.noreply.github.com>
Date:   Sat Feb 14 09:46:32 2026 +0530

    Update lightshare-admin.css

commit 50a3d4dd5bcf523a902332e5f4b78b2f

--- a/admin/css/lightshare-admin.css
+++ b/admin/css/lightshare-admin.css
@@ -325,11 +325,18 @@
 	overflow: hidden;
 	float: left;
 	margin-bottom: 0px;
+	cursor: grab;
+}
+
+.lightshare-social-networks li.is-dragging {
+	opacity: 0.6;
+	cursor: grabbing;
 }
 .lightshare-social-networks li label {
 	position: relative;
 	width: 120px;
 	height: 18px;
+	border: 1px solid transparent;
 	font-size: 12px;
 	float: left;
 	padding-right: 8px;
